dbeaver/pro#8417 Fix git comment